--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Application
 spring.application.name=UberApplication
-server.port=8080
+server.port=8081
 
 # Database Configuration (PostgreSQL with PostGIS)
 spring.datasource.url=jdbc:postgresql://localhost:5432/uber_db
@@ -50,3 +50,62 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.security.user.name=admin
 spring.security.user.password=admin123
 spring.security.user.roles=ADMIN
+
+
+
+## Application
+#spring.application.name=UberApplication
+#server.port=8080
+#
+## Database Configuration
+#spring.datasource.url=jdbc:postgresql://localhost:5432/uber_db?currentSchema=public
+#spring.datasource.username=uber_user
+#spring.datasource.password=0000
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#
+## Hibernate & JPA
+#spring.jpa.hibernate.ddl-auto=validate
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.jdbc.batch_size=20
+#spring.jpa.properties.hibernate.order_inserts=true
+#spring.jpa.properties.hibernate.order_updates=true
+#spring.jpa.open-in-view=false
+#
+## Spatial Configuration (for Hibernate 6+)
+#spring.jpa.properties.hibernate.spatial.dialect=org.hibernate.spatial.dialect.postgis.PostgisDialect
+#
+## Database Initialization
+#spring.sql.init.mode=always
+#spring.sql.init.continue-on-error=true
+#spring.sql.init.data-locations=classpath:db/migration/V2__Seed_data.sql
+#spring.sql.init.schema-locations=classpath:db/migration/V1__Initial_schema.sql
+#
+## JWT Configuration
+#jwt.secretKey=jdjnfenjfbakhfndnvjsdnfjvdnvdn56
+#jwt.access-token.expiration=600000
+#jwt.refresh-token.expiration=15552000000
+#
+## Logging
+#logging.level.org.springframework=INFO
+#logging.level.com.project=DEBUG
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+#
+## Async Processing
+#spring.task.execution.pool.core-size=5
+#spring.task.execution.pool.max-size=10
+#spring.task.execution.pool.queue-capacity=100
+#
+## Mail Configuration
+#spring.mail.host=smtp.gmail.com
+#spring.mail.port=587
+#spring.mail.username=mayankchauhan8515@gmail.com
+#spring.mail.password=MyAppPassword%56%78%
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.starttls.enable=true
+#
+## Security
+#spring.security.user.name=admin
+#spring.security.user.password=admin123
+#spring.security.user.roles=ADMIN
